fixed layout issue with section 4 text

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -189,7 +189,7 @@ html, body {
     margin-top: 5%;
 
     h4 {
-        width: 600px;
+        width: 300px;
         letter-spacing: 5px;
         margin-left: auto;
         margin-right: auto;
@@ -551,6 +551,12 @@ footer {
 
         h4 {
             margin: 8% 0px;
+        }
+    }
+    
+    #section5Block { 
+        h4 {
+            width: 450px;
         }
     }
     
